Overflow issue fix

--- a/taksi-project/src/components/About/About.css
+++ b/taksi-project/src/components/About/About.css
@@ -144,7 +144,7 @@
   }
 
   .hero-container h2 {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 
   .hero-container h1 {
